# Pwzn

./: magnet_test.txt  pyproject.toml
lab1/: main.py  testowy.txt  tutorial.py
lab1/bookshell/: karamazov_brothers.txt  sherlock_holmes.txt  the_art_of_war_suntzu.txt  the_republic_plato.txt  thus_spake_zarathustra.txt
lab2/: ising_sim.py  main.py
