[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Ignacy Czajkowski <czignacy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.2"
ascii_graph = "^1.5.1"
argparse = "^1.4.0"
tqdm = "^4.66.5"
nltk = "^3.9.1"
numpy = "^2.1.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
